# caffe

./: CMakeLists.txt  Compilation.md
caffe_code_analysis/: Caffe Blob.md  Caffe Layer.md  Caffe SyncedMemory.md  Caffe源码结构.md
cmake/: ConfigGen.cmake  Cuda.cmake  Dependencies.cmake  Misc.cmake  ProtoBuf.cmake  Utils.cmake
cmake/Modules/: FindGFlags.cmake  FindNumPy.cmake  FindSnappy.cmake
cmake_learning/: Utils.cmake
data/mnist/: get_mnist.sh
examples/: CMakeLists.txt
examples/mnist/: A_lenet_solver.prototxt  A_lenet_train_test.prototxt
include/caffe/: blob.hpp  common.hpp  layer.hpp  layer_factory.hpp  net.hpp  solver.hpp  syncedmem.hpp
src/caffe/: blob.cpp  common.cpp  net.cpp  solver.cpp  syncedmem.cpp
src/caffe/util/: math_functions.cpp  math_functions.cu
tools/: caffe.cpp
